@@ -30,6 +30,7 @@ limitations under the License.
   <link rel="stylesheet" type="text/css" href="css/styles/cores.css?_=${version}">
   <link rel="stylesheet" type="text/css" href="css/styles/dashboard.css?_=${version}">
   <link rel="stylesheet" type="text/css" href="css/styles/dataimport.css?_=${version}">
+  <link rel="stylesheet" type="text/css" href="css/styles/files.css?_=${version}">
   <link rel="stylesheet" type="text/css" href="css/styles/index.css?_=${version}">
   <link rel="stylesheet" type="text/css" href="css/styles/java-properties.css?_=${version}">
   <link rel="stylesheet" type="text/css" href="css/styles/logging.css?_=${version}">
