@@ -275,6 +275,7 @@ limitations under the License.
 #core-menu .config a { background-image: url( ../../img/ico/gear.png ); }
 #core-menu .analysis a { background-image: url( ../../img/ico/funnel.png ); }
 #core-menu .documents a { background-image: url( ../../img/ico/documents-stack.png ); }
+#core-menu .files a { background-image: url( ../../img/ico/folder.png ); }
 #core-menu .schema-browser a { background-image: url( ../../img/ico/book-open-text.png ); }
 #core-menu .replication a { background-image: url( ../../img/ico/node.png ); }
 #core-menu .distribution a { background-image: url( ../../img/ico/node-select.png ); }
