@@ -41,6 +41,7 @@ require
     'lib/order!scripts/dataimport',
     'lib/order!scripts/dashboard',
     'lib/order!scripts/file',
+    'lib/order!scripts/files',
     'lib/order!scripts/index',
     'lib/order!scripts/java-properties',
     'lib/order!scripts/logging',
