@@ -1,0 +1,50 @@
+<!--
+Licensed to the Apache Software Foundation (ASF) under one or more
+contributor license agreements.  See the NOTICE file distributed with
+this work for additional information regarding copyright ownership.
+The ASF licenses this file to You under the Apache License, Version 2.0
+(the "License"); you may not use this file except in compliance with
+the License.  You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+<div id="files" class="clearfix">
+
+  <div id="frame">
+
+    <div id="tree" class="tree">#tree</div>
+    <div id="file-content" class="clearfix">
+
+      <a id="url" class="address-bar" href="#"></a>
+
+      <form method="post" class="modify">
+      
+        <textarea name="stream.body"></textarea>
+
+        <div class="buttons clearfix">
+          <button type="submit"><span>Save file</span></button>
+        </div>
+
+      </form>
+
+      <form method="post" class="upload">
+
+        <input type="file" name="fileupload">
+
+        <div class="buttons clearfix">
+          <button><span>Replace current file</span></button>
+        </div>
+
+      </form>
+
+    </div>
+
+  </div>
+
+</div>
