@@ -87,6 +87,8 @@ New Features
 * SOLR-5447: Add a QParserPlugin for Lucene's SimpleQueryParser.
   (Jack Conradson via shalin)
 
+* SOLR-5446: Admin UI - Allow changing Schema and Config (steffkes)
+
 Bug Fixes
 ----------------------
 
